fix and update: files routers and index.ts
