# src/swagger-output.json
@@ -19,6 +19,176 @@
     }
   },
   "paths": {
+    "/prestamos/": {
+      "get": {
+        "tags": [
+          "Prestamos"
+        ],
+        "description": "Endpoint para listar todos los prestamos ",
+        "parameters": [
+          {
+            "name": "devuelto",
+            "in": "query",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "post": {
+        "tags": [
+          "Prestamos"
+        ],
+        "description": "Endpoint para registrar un Nuevo Prestamo ",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "libroId": {
+                  "example": "any"
+                },
+                "socioId": {
+                  "example": "any"
+                },
+                "fechaPrestamo": {
+                  "example": "any"
+                },
+                "fechaDevolucion": {
+                  "example": "any"
+                },
+                "devuelto": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/prestamos/{id}": {
+      "get": {
+        "tags": [
+          "Prestamos"
+        ],
+        "description": "Endpoint para mostrar un prestamo por ID ",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "put": {
+        "tags": [
+          "Prestamos"
+        ],
+        "description": "Endpoint para Actualizar los datos de un Prestamo por ID ",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "fechaDevolucion": {
+                  "example": "any"
+                },
+                "devuelto": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "Prestamos"
+        ],
+        "description": "Endpoint para Eliminar el registro de un Prestamo ",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
     "/libros/": {
       "get": {
         "tags": [
@@ -39,9 +209,9 @@
             "type": "string"
           },
           {
-            "name": "Categoria",
+            "name": "categoria",
             "in": "query",
-            "description": "fintrar por categoria",
+            "description": "filtrar por categoria",
             "type": "string"
           },
           {
@@ -220,7 +390,7 @@
         "tags": [
           "Socios"
         ],
-        "description": "Endpoint para registrar un Nuevo Socio",
+        "description": "Endpoint para registrar un Nuevo Socio. Todos los campos son String, excepto <suscripto> que es boolean (true/false)",
         "parameters": [
           {
             "name": "body",
@@ -287,7 +457,7 @@
         "tags": [
           "Socios"
         ],
-        "description": "Endpoint para Actualizar ",
+        "description": "Endpoint para Actualizar solo el contacto (email) y/o membresia (suscripto), de un socio por ID",
         "parameters": [
           {
             "name": "id",
@@ -318,7 +488,10 @@
         }
       },
       "delete": {
-        "description": "",
+        "tags": [
+          "Socios"
+        ],
+        "description": "Endpoint para Eliminar a un socio por ID ",
         "parameters": [
           {
             "name": "id",
@@ -342,7 +515,10 @@
     },
     "/sanciones/": {
       "get": {
-        "description": "",
+        "tags": [
+          "Sanciones"
+        ],
+        "description": "Endpoint para listar todas las sanciones ",
         "parameters": [
           {
             "name": "pagada",
@@ -357,7 +533,10 @@
         }
       },
       "post": {
-        "description": "",
+        "tags": [
+          "Sanciones"
+        ],
+        "description": "Endpoint para registrar una nueva Sanción ",
         "parameters": [
           {
             "name": "body",
@@ -393,7 +572,10 @@
     },
     "/sanciones/{id}": {
       "get": {
-        "description": "",
+        "tags": [
+          "Sanciones"
+        ],
+        "description": "Endpoint para mostrar una sancion por ID ",
         "parameters": [
           {
             "name": "id",
@@ -412,7 +594,10 @@
         }
       },
       "delete": {
-        "description": "",
+        "tags": [
+          "Sanciones"
+        ],
+        "description": "Endpoint para eliminar una Sanción por ID ",
         "parameters": [
           {
             "name": "id",
